Ajout arrière plan + première mise en forme du titre
- Ajout arrière plan
- Changement méthode de slideshow + positionné à gauche
- Brosse à dents modifiée

--- a/bienvenue.html
+++ b/bienvenue.html
@@ -42,63 +42,16 @@
 	</nav>
   </header>
   <body>
-	<h1>AMAZIN</h1>
-	<h2>VOUS VOUS EN LECHEREZ LES BABINES</h2>
+	<h1 class="titreaccueil">AMAZIN</h1>
+	<h2 class="soustitreaccueil">VOUS VOUS EN LECHEREZ LES BABINES</h2>
 
 <!-- SLIDESHOW -->
 
-	<div class="css-slideshow">
-	<figure>
-		<img src="assets/stylo.jpg" alt="Un stylo poisson" width="495" height="370" class="alignnone size-full wp-image-172">
-		<figcaption>
-			<!-- Texte à afficher -->
-			WESH
-		</figcaption> 
-	</figure>
-	<figure>
-		<img src="assets/trousse.png" alt="Une trousse" width="495" height="370" class="alignnone size-full wp-image-179">
-		<figcaption>
-			<!-- Texte à afficher -->
-			ALORS
-		</figcaption> 
-	</figure>
-	<figure>
-		<img src="assets/trousse.png" alt="Une trousse" width="495" height="370" class="alignnone size-large wp-image-178">
-		<figcaption>
-			<!-- Texte à afficher -->
-		</figcaption> 
-	</figure>
-	<figure>
-		<img src="assets/trousse.png" alt="Une trousse" width="495" height="370" class="alignnone size-full wp-image-177">
-		<figcaption>
-			<!-- Texte à afficher -->
-		</figcaption> 
-	</figure>
-<figure>
-		<img src="assets/trousse.png" alt="Une trousse" width="495" height="370" class="alignnone size-large wp-image-176">
-		<figcaption>
-			<!-- Texte à afficher -->
-		</figcaption> 
-	</figure>
-	<figure>
-		<img src="assets/trousse.png" alt="Une trousse" width="495" height="370" class="alignnone size-large wp-image-175">
-		<figcaption>
-			<!-- Texte à afficher -->
-		</figcaption> 
-	</figure>
-	<figure>
-		<img src="assets/trousse.png" alt="Une trousse" width="495" height="370" class="alignnone size-large wp-image-174">
-		<figcaption>
-			<!-- Texte à afficher -->
-		</figcaption> 
-	</figure>
-	<figure>
-		<img src="assets/trousse.png" alt="Une trousse" width="495" height="370" class="alignnone size-large wp-image-173">
-		<figcaption>
-			<!-- Texte à afficher -->
-		</figcaption> 
-	</figure>
-  </div>
+	<div class="slideshow">
+	  <img src="assets/chaussettes.png" alt="chaussettes" />
+	  <img src="assets/trousse.png" alt="trousse" />
+	  <img src="assets/stylo.png" alt="stylo" />
+	</div>
 
 <!-- FIN DU SLIDESHOW -->
 </body>
