--- a/recherche.html
+++ b/recherche.html
@@ -34,7 +34,7 @@
   </header>
   <div id="recherche">
 	<div id="article1">
-		<a href="article.html"><img class="illus-gauche" src="assets/stylo.jpg" alt="Article 1 : Paquebot"></a>
+		<a href="article.html"><img class="illus-gauche" src="assets/stylo.png" alt="Article 1 : Paquebot"></a>
 		<a href="article.html"><h1> Stylo en forme de poisson </h1></a>
 		<p>Recevez votre article le 15 décembre 2030</p>
 		<p><strong>Prix : 150 EUR</strong></p>
